--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -10,6 +10,11 @@
             android:icon="@drawable/ic_home">
         </item>
 
+        <item android:id="@+id/nav_vehicle"
+            android:title="@string/vehicle_Type"
+            android:icon="@drawable/ic_vehicle">
+
+        </item>
         <item android:id="@+id/nav_vOwner"
             android:title="@string/vehicle_owner"
             android:icon="@drawable/ic_owner">
